[change] prepear base of project

--- a/index.html
+++ b/index.html
@@ -3,17 +3,11 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>GitHubAPIclient</title>
+  <title>Travel</title>
 </head>
 
 <body>
-  <form id='form'>
-    <input type="text" value='yurko7' name='owner' placeholder="Owner git account">
-    <input type="submit" value='Submit'>
-  </form>
-
-  <div id="message"></div>
-  <div id="table"></div>
+ 
 
   <script src="dist/app.js"></script>
 
