--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
 </head>
 
 <body>
+ <header>header</header>
+ <main>main</main>
+ <footer>footer</footer>
  
 
-  <script src="dist/app.js"></script>
+  
 
 </body>
+
+<script src="dist/app.js"></script>
 
 </html>
