--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 
 <body>
- <header>header</header>
+ <header>header
+   <button>button</button>
+   <button>button</button>
+   <button>button</button>
+ </header>
  <main>main</main>
  <footer>footer</footer>
  
