[add] main button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
    <button>button</button>
    <button>button</button>
  </header>
- <main>main</main>
+ <main>main
+   <button>main</button>
+ </main>
  <footer>footer</footer>
  
 
