--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
  </header>
  <main>main
    <button>main</button>
+   <form action="">
+     firstname <input type="text" placeholder="enter first name"><br>
+     email <input type="email" placeholder="www@mail.com" ><br>
+     <button>accept</button>
+
+   </form>
  </main>
  <footer>footer</footer>
  
