[add] base scss structure

--- a/index.html
+++ b/index.html
@@ -7,24 +7,26 @@
 </head>
 
 <body>
- <header>header
-   <button>button</button>
-   <button>button</button>
-   <button>button</button>
- </header>
- <main>main
-   <button>main</button>
-   <form action="">
-     firstname <input type="text" placeholder="enter first name"><br>
-     email <input type="email" placeholder="www@mail.com" ><br>
-     <button>accept</button>
+  <header>header
+    <button>button</button>
+    <button>button</button>
+    <button>button</button>
+    <button>button</button>
+    <button>button</button>
+  </header>
+  <content>main
+    <button>main</button>
+    <form action="">
+      firstname <input type="text" placeholder="enter first name"><br>
+      email <input type="email" placeholder="www@mail.com"><br>
+      <button>accept</button>
 
-   </form>
- </main>
- <footer>footer</footer>
- 
+    </form>
+    </main>
+    <footer>footer</footer>
 
-  
+
+
 
 </body>
 
