[add] better scss code structure

--- a/index.html
+++ b/index.html
@@ -7,26 +7,20 @@
 </head>
 
 <body>
-  <header>header
-    <button>button</button>
-    <button>button</button>
-    <button>button</button>
-    <button>button</button>
+  <header>
+    <h2>Content</h2>
     <button>button</button>
   </header>
-  <content>main
-    <button>main</button>
-    <form action="">
-      firstname <input type="text" placeholder="enter first name"><br>
-      email <input type="email" placeholder="www@mail.com"><br>
-      <button>accept</button>
 
-    </form>
-    </main>
-    <footer>footer</footer>
+  <content>
+    <h2>Content</h2>
+    <button>button</button>
+  </content>
 
-
-
+  <footer>
+    <h2>Footer</h2>
+    <button>button</button>
+  </footer>
 
 </body>
 
