--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
 </head>
 
 <body>
-  <header>
-   
-  </header>
+  <div class="header">
+    <div class="container">
+      <div class="logo"></div>
+      <div class="navigation">
+        <a href="#" class="navigation__link">Home</a>
+        <a href="#" class="navigation__link">About us</a>
+        <a href="#" class="navigation__link">Projects</a>
+        <a href="#" class="navigation__link">Contact us</a>
+      </div>
+    </div>
+  </div>
 
   <content>
     <h2>Content</h2>
