--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div class="header">
-    <div class="container">
+    <div class="containerHeader">
       <div class="logo"></div>
       <div class="navigation">
         <a href="#" class="navigation__link">Home</a>
