--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="#" class="navigation__link">Home</a>
         <a href="#" class="navigation__link">About us</a>
         <a href="#" class="navigation__link">Projects</a>
-        <a href="#" class="navigation__link">Contact us</a>
+        <a href="#" class="navigation__link navigation__link--active">Contact us</a>
       </div>
     </div>
   </div>
