--- a/index.html
+++ b/index.html
@@ -19,10 +19,68 @@
     </div>
   </div>
 
-  <content>
-    <h2>Content</h2>
-    <button>button</button>
-  </content>
+  <main class="main">
+    <div class="containerMain">
+      <div class="title">I Like To Ask The Same Question Many Many Times</div>
+      <button class="button">Ok ask me</button>
+      <div class="subMain">
+        <div class="subtitle">Places You Must Visit In Your Lifetime</div>
+        <div class="cards">
+          <div class="cardsItem">
+            <div class="cardsItem__img cardsItem__img--azheekal"></div>
+            <div class="cardsItem__name"></div>
+          </div>
+          <div class="cardsItem">
+              <div class="cardsItem__img cardsItem__img--ooty"></div>
+              <div class="cardsItem__name"></div>
+          </div>
+          <div class="cardsItem">
+              <div class="cardsItem__img cardsItem__img--Munnar"></div>
+              <div class="cardsItem__name"></div>
+          </div>
+          <div class="cardsItem">
+              <div class="cardsItem__img cardsItem__img--humpi"></div>
+              <div class="cardsItem__name"></div>
+          </div>
+          <div class="cardsItem">
+              <div class="cardsItem__img cardsItem__img--kovalam"></div>
+              <div class="cardsItem__name"></div>
+          </div>
+          <div class="cardsItem">
+              <div class="cardsItem__img cardsItem__img--kuttanad"></div>
+              <div class="cardsItem__name"></div>
+          </div>
+          <div class="cardsItem">
+              <div class="cardsItem__img cardsItem__img--thenmala"></div>
+              <div class="cardsItem__name"></div>
+          </div>
+          <div class="cardsItem">
+              <div class="cardsItem__img cardsItem__img--beach"></div>
+              <div class="cardsItem__name"></div>
+          </div>
+          <div class="cardsItem">
+              <div class="cardsItem__img cardsItem__img--munnar2"></div>
+              <div class="cardsItem__name"></div>
+          </div>
+          <div class="cardsItem">
+              <div class="cardsItem__img cardsItem__img--punaloor"></div>
+              <div class="cardsItem__name"></div>
+          </div>
+        </div>
+      </div>
+      <div class="subtitle1">We’ve since expanded our life list to 43 sites around the world</div>
+      <div class="subtitle2">43 Places to See Before You Die</div>
+      <div class="guide">
+      <div class="guideItem">
+        <div class="guide__sites"></div>
+        <div class="guide__basket"></div>
+        <div class="guide__foto"></div>
+        <div class="guide__find"></div>
+      </div>
+        </div>
+
+    </div>
+  </main>
 
   <footer>
     <h2>Footer</h2>
