[add] footer to html

--- a/index.html
+++ b/index.html
@@ -82,10 +82,7 @@
     </div>
   </main>
 
-  <footer>
-    <h2>Footer</h2>
-    <button>button</button>
-  </footer>
+  <footer class="footer">Designed by cssauthor.com</footer>
 
 </body>
 
