[add]div with class 'title2'

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
   <main class="main">
     <div class="containerMain">
-      <div class="title">I Like To Ask The Same Question Many Many Times</div>
+      <div class="title1">I Like To Ask The Same Question</div>
+      <div class="title2">Many Many Times</div>
       <button class="button">Ok ask me</button>
       <div class="subMain">
         <div class="subtitle">Places You Must Visit In Your Lifetime</div>
