--- a/index.html
+++ b/index.html
@@ -29,43 +29,43 @@
         <div class="cards">
           <div class="cardsItem">
             <div class="cardsItem__img cardsItem__img--azheekal"></div>
-            <div class="cardsItem__name"></div>
+            <div class="cardsItem__name">Azheekal</div>
           </div>
           <div class="cardsItem">
               <div class="cardsItem__img cardsItem__img--ooty"></div>
-              <div class="cardsItem__name"></div>
+              <div class="cardsItem__name">Ooty</div>
           </div>
           <div class="cardsItem">
               <div class="cardsItem__img cardsItem__img--Munnar"></div>
-              <div class="cardsItem__name"></div>
+              <div class="cardsItem__name">Munnar</div>
           </div>
           <div class="cardsItem">
               <div class="cardsItem__img cardsItem__img--humpi"></div>
-              <div class="cardsItem__name"></div>
+              <div class="cardsItem__name">Humpi</div>
           </div>
           <div class="cardsItem">
               <div class="cardsItem__img cardsItem__img--kovalam"></div>
-              <div class="cardsItem__name"></div>
+              <div class="cardsItem__name">Kovalam</div>
           </div>
           <div class="cardsItem">
               <div class="cardsItem__img cardsItem__img--kuttanad"></div>
-              <div class="cardsItem__name"></div>
+              <div class="cardsItem__name">Kuttanad</div>
           </div>
           <div class="cardsItem">
               <div class="cardsItem__img cardsItem__img--thenmala"></div>
-              <div class="cardsItem__name"></div>
+              <div class="cardsItem__name">Thenmala</div>
           </div>
           <div class="cardsItem">
               <div class="cardsItem__img cardsItem__img--beach"></div>
-              <div class="cardsItem__name"></div>
+              <div class="cardsItem__name">Beach</div>
           </div>
           <div class="cardsItem">
               <div class="cardsItem__img cardsItem__img--munnar2"></div>
-              <div class="cardsItem__name"></div>
+              <div class="cardsItem__name">Munnar</div>
           </div>
           <div class="cardsItem">
               <div class="cardsItem__img cardsItem__img--punaloor"></div>
-              <div class="cardsItem__name"></div>
+              <div class="cardsItem__name">Punaloor</div>
           </div>
         </div>
       </div>
