[change] name of class

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <div class="cardsItem__name">Ooty</div>
           </div>
           <div class="cardsItem">
-              <div class="cardsItem__img cardsItem__img--Munnar"></div>
+              <div class="cardsItem__img cardsItem__img--munnar"></div>
               <div class="cardsItem__name">Munnar</div>
           </div>
           <div class="cardsItem">
