[add] classes for block 'guide'

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       </div>
     </div>
   </div>
-
   <main class="main">
     <div class="containerMain">
       <div class="title1">I Like To Ask The Same Question</div>
@@ -32,51 +31,62 @@
             <div class="cardsItem__name">Azheekal</div>
           </div>
           <div class="cardsItem">
-              <div class="cardsItem__img cardsItem__img--ooty"></div>
-              <div class="cardsItem__name">Ooty</div>
+            <div class="cardsItem__img cardsItem__img--ooty"></div>
+            <div class="cardsItem__name">Ooty</div>
           </div>
           <div class="cardsItem">
-              <div class="cardsItem__img cardsItem__img--munnar"></div>
-              <div class="cardsItem__name">Munnar</div>
+            <div class="cardsItem__img cardsItem__img--munnar"></div>
+            <div class="cardsItem__name">Munnar</div>
           </div>
           <div class="cardsItem">
-              <div class="cardsItem__img cardsItem__img--humpi"></div>
-              <div class="cardsItem__name">Humpi</div>
+            <div class="cardsItem__img cardsItem__img--humpi"></div>
+            <div class="cardsItem__name">Humpi</div>
           </div>
           <div class="cardsItem">
-              <div class="cardsItem__img cardsItem__img--kovalam"></div>
-              <div class="cardsItem__name">Kovalam</div>
+            <div class="cardsItem__img cardsItem__img--kovalam"></div>
+            <div class="cardsItem__name">Kovalam</div>
           </div>
           <div class="cardsItem">
-              <div class="cardsItem__img cardsItem__img--kuttanad"></div>
-              <div class="cardsItem__name">Kuttanad</div>
+            <div class="cardsItem__img cardsItem__img--kuttanad"></div>
+            <div class="cardsItem__name">Kuttanad</div>
           </div>
           <div class="cardsItem">
-              <div class="cardsItem__img cardsItem__img--thenmala"></div>
-              <div class="cardsItem__name">Thenmala</div>
+            <div class="cardsItem__img cardsItem__img--thenmala"></div>
+            <div class="cardsItem__name">Thenmala</div>
           </div>
           <div class="cardsItem">
-              <div class="cardsItem__img cardsItem__img--beach"></div>
-              <div class="cardsItem__name">Beach</div>
+            <div class="cardsItem__img cardsItem__img--beach"></div>
+            <div class="cardsItem__name">Beach</div>
           </div>
           <div class="cardsItem">
-              <div class="cardsItem__img cardsItem__img--munnar2"></div>
-              <div class="cardsItem__name">Munnar</div>
+            <div class="cardsItem__img cardsItem__img--munnar2"></div>
+            <div class="cardsItem__name">Munnar</div>
           </div>
           <div class="cardsItem">
-              <div class="cardsItem__img cardsItem__img--punaloor"></div>
-              <div class="cardsItem__name">Punaloor</div>
+            <div class="cardsItem__img cardsItem__img--punaloor"></div>
+            <div class="cardsItem__name">Punaloor</div>
           </div>
         </div>
       </div>
       <div class="subtitle1">We’ve since expanded our life list to 43 sites around the world</div>
       <div class="subtitle2">43 Places to See Before You Die</div>
       <div class="guide">
-      <div class="guideItem">
-        <div class="guide__sites"></div>
-        <div class="guide__basket"></div>
-        <div class="guide__foto"></div>
-        <div class="guide__find"></div>
+        <div class="guideItem">
+          <div class="guideItem__card guideItem__card--sites"></div>
+          <div class="guideItem__title">Sites the world</div>
+        </div>
+          <div class="guideItem">
+          <div class="guideItem__card guideItem__card--basket"></div>
+        <div class="guideItem__title">Shopping</div>
+        </div>
+          <div class="guideItem">
+          <div class="guideItem__card guideItem__card--foto"></div>
+        <div class="guideItem__title">Photography</div>
+        </div>
+          <div class="guideItem">
+          <div class="guideItem__card guideItem__card--loupe"></div>
+        <div class="guideItem__title">Find the best</div>
+        </div>
       </div>
     </div>
   </div>
