--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@
       </div>
     </div>
   </div>
-</main>
-<footer class="footer">Designed by cssauthor.com</footer>
-
+  </main>
+  <div class="footer">
+    <div class="footerTitle">Designed by cssauthor.com</div>
+  </div>
 </body>
 
 <script src="dist/app.js"></script>
