Removed unnecessary files

--- a/src/index.html
+++ b/src/index.html
@@ -3,97 +3,11 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Travel</title>
+  <title>Base project</title>
 </head>
 
 <body>
-  <div class="header">
-    <div class="containerHeader">
-      <div class="logo"></div>
-      <div class="navigation">
-        <a href="#" class="navigation__link">Home</a>
-        <a href="#" class="navigation__link">About us</a>
-        <a href="#" class="navigation__link">Projects</a>
-        <a href="#" class="navigation__link navigation__link--active">Contact us</a>
-      </div>
-    </div>
-  </div>
-  <main class="main">
-    <div class="containerMain">
-      <div class="title1">I Like To Ask The Same Question</div>
-      <div class="title2">Many Many Times</div>
-      <button class="button">Ok ask me</button>
-      <div class="subMain">
-        <div class="subtitle">Places You Must Visit In Your Lifetime</div>
-        <div class="cards">
-          <div class="cardsItem">
-            <div class="cardsItem__img cardsItem__img--azheekal"></div>
-            <div class="cardsItem__name">Azheekal</div>
-          </div>
-          <div class="cardsItem">
-            <div class="cardsItem__img cardsItem__img--ooty"></div>
-            <div class="cardsItem__name">Ooty</div>
-          </div>
-          <div class="cardsItem">
-            <div class="cardsItem__img cardsItem__img--munnar"></div>
-            <div class="cardsItem__name">Munnar</div>
-          </div>
-          <div class="cardsItem">
-            <div class="cardsItem__img cardsItem__img--humpi"></div>
-            <div class="cardsItem__name">Humpi</div>
-          </div>
-          <div class="cardsItem">
-            <div class="cardsItem__img cardsItem__img--kovalam"></div>
-            <div class="cardsItem__name">Kovalam</div>
-          </div>
-          <div class="cardsItem">
-            <div class="cardsItem__img cardsItem__img--kuttanad"></div>
-            <div class="cardsItem__name">Kuttanad</div>
-          </div>
-          <div class="cardsItem">
-            <div class="cardsItem__img cardsItem__img--thenmala"></div>
-            <div class="cardsItem__name">Thenmala</div>
-          </div>
-          <div class="cardsItem">
-            <div class="cardsItem__img cardsItem__img--beach"></div>
-            <div class="cardsItem__name">Beach</div>
-          </div>
-          <div class="cardsItem">
-            <div class="cardsItem__img cardsItem__img--munnar2"></div>
-            <div class="cardsItem__name">Munnar</div>
-          </div>
-          <div class="cardsItem">
-            <div class="cardsItem__img cardsItem__img--punaloor"></div>
-            <div class="cardsItem__name">Punaloor</div>
-          </div>
-        </div>
-      </div>
-      <div class="subtitle1">We’ve since expanded our life list to 43 sites around the world</div>
-      <div class="subtitle2">43 Places to See Before You Die</div>
-      <div class="guide">
-        <div class="guideItem">
-          <div class="guideItem__card guideItem__card--sites"></div>
-          <div class="guideItem__title">Sites the world</div>
-        </div>
-        <div class="guideItem">
-          <div class="guideItem__card guideItem__card--basket"></div>
-          <div class="guideItem__title">Shopping</div>
-        </div>
-        <div class="guideItem">
-          <div class="guideItem__card guideItem__card--foto"></div>
-          <div class="guideItem__title">Photography</div>
-        </div>
-        <div class="guideItem">
-          <div class="guideItem__card guideItem__card--loupe"></div>
-          <div class="guideItem__title">Find the best</div>
-        </div>
-      </div>
-    </div>
-    </div>
-  </main>
-  <div class="footer">
-    <div class="footerTitle">Designed by cssauthor.com</div>
-  </div>
+
 </body>
 
 </html>
